--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@ body{
     margin: 0;
     padding: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;800&display=swap');
+*{
+    font-family: 'Work Sans', sans-serif;
+}
