--- a/style.css
+++ b/style.css
@@ -6,3 +6,69 @@ body{
 *{
     font-family: 'Work Sans', sans-serif;
 }
+nav{
+    height: 130px;
+    background-color: #fff;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);;
+}
+.header-section{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 240px;
+    align-items: center;
+    
+}
+.logo{
+    display: flex;
+    align-items: center;
+    
+}
+.logo > img{
+    height: 86px;
+    height: 40px;
+}
+.logo h3{
+    font-size: 45px;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 20px;
+}
+span{
+    color: rgb(255, 45, 206);
+}
+.menu-bar{
+    display: flex;
+    font-size: 1.125rem;
+    font-weight: 500;
+   
+}
+.menu-bar > ul{
+    display: flex;
+    list-style: none;
+    
+}
+.menu-bar li{
+    padding-right: 32px;
+    
+}
+.menu-bar a{
+    color: #3C354F;
+}
+
+.follow-btn{
+    display: flex;
+    width: 250px;
+    height: 56px;
+    align-items: center;
+    background-color: rgba(11, 2, 25, 0.10);
+    border-radius: 8px;
+    justify-content: space-evenly;
+
+    
+   
+}
+.follow-btn img{
+    width: 30px;
+    height: 33px;
+    
+}
