--- a/style.css
+++ b/style.css
@@ -2,10 +2,16 @@ body{
     margin: 0;
     padding: 0;
 }
+
+/* work sans font add from google*/
+
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700;800&display=swap');
 *{
     font-family: 'Work Sans', sans-serif;
 }
+
+/* Heading Section*/
+
 nav{
     height: 130px;
     background-color: #fff;
@@ -62,13 +68,78 @@ span{
     align-items: center;
     background-color: rgba(11, 2, 25, 0.10);
     border-radius: 8px;
-    justify-content: space-evenly;
-
-    
-   
+    justify-content: space-evenly;  
 }
+
 .follow-btn img{
     width: 30px;
-    height: 33px;
+    height: 33px; 
+}
+
+/* Banner Section */
+
+.banner-container{
+    display: flex;
+    gap: 68px;
+    height: 700px;
+
+}
+
+.banner-text{
+    border: 2px solid red;
+    width: 901px;
+    padding: 148px 0;
+    padding-left: 240px;
+    background-image: url("./images/Group\ 14.png");
+    
+    
+    
+}
+
+.banner-text h3{
+    color: #0B0223;
+    font-size: 3.4rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    display: inline-flex;
+    margin: 0;
+    
+}
+.banner-text h2{
+    background: linear-gradient(189deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-size: 5.900rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0;
+}
+.banner-text p{
+    color: #534C64;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
+button{
+    background: #FF42A5; 
+    border-radius: 48px;
+    padding: 21px 40px;
+    border: none;
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-right: 20px;
+}
+.btn-2{
+    background: #4EC5F7;
+}
+
+.banner-img{
+    margin-right: 240px;
+    width: 711px;
+    border: 2px solid red;
+    margin-top: 19px;
     
 }
