--- a/style.css
+++ b/style.css
@@ -15,26 +15,27 @@ body{
 nav{
     height: 130px;
     background-color: #fff;
-    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+    viewport-fit: 100%;
 }
 .header-section{
     display: flex;
     justify-content: space-between;
-    padding: 0 240px;
+    padding: 0 100px;
     align-items: center;
     
 }
-.logo{
+.logo, .footer-logo{
     display: flex;
     align-items: center;
     
 }
-.logo > img{
+.logo > img, .footer-logo{
     height: 86px;
     height: 40px;
 }
-.logo h3{
-    font-size: 45px;
+.logo h3, .footer-logo{
+    font-size: 3rem;
     font-weight: 700;
     text-align: center;
     padding-left: 20px;
@@ -53,10 +54,12 @@ span{
     list-style: none;
     
 }
-.menu-bar li{
-    padding-right: 32px;
+.menu-bar li a{
+    padding-right: 28px;
+    text-decoration: none;
     
 }
+
 .menu-bar a{
     color: #3C354F;
 }
@@ -77,41 +80,35 @@ span{
 }
 
 /* Banner Section */
-
-.banner-container{
+.banner-section{
+    viewport-fit: 100%;
     display: flex;
-    gap: 68px;
-    height: 700px;
+    gap: 60px;
+    
 
 }
-
-.banner-text{
-    border: 2px solid red;
-    width: 901px;
-    padding: 148px 0;
-    padding-left: 240px;
-    background-image: url("./images/Group\ 14.png");
-    
-    
-    
+.banner-container{
+    width: 48%;
+    height: 600px;
+    background-image: url("./images/Group-14.png");
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .banner-text h3{
     color: #0B0223;
-    font-size: 3.4rem;
+    font-size: 2rem;
     font-weight: 600;
     text-transform: uppercase;
-    text-align: center;
-    display: inline-flex;
     margin: 0;
-    
 }
 .banner-text h2{
     background: linear-gradient(189deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    font-size: 5.900rem;
+    font-size: 3.5rem;
     font-weight: 800;
     text-transform: uppercase;
     margin: 0;
@@ -125,11 +122,11 @@ span{
 button{
     background: #FF42A5; 
     border-radius: 48px;
-    padding: 21px 40px;
+    padding: 15px 30px;
     border: none;
     color: #fff;
-    font-size: 1.25rem;
-    font-weight: 600;
+    font-size: 1rem;
+    font-weight: 500;
     margin-right: 20px;
 }
 .btn-2{
@@ -137,9 +134,295 @@ button{
 }
 
 .banner-img{
-    margin-right: 240px;
-    width: 711px;
-    border: 2px solid red;
-    margin-top: 19px;
+    width: 550px;
+    height: 570px;
+    margin-top: 30px;
+    
     
 }
+
+
+
+/*online games section*/
+.online-games-section{
+    viewport-fit: 100%;
+    margin: 0;
+    
+    
+}
+.online-games-heading{
+    text-align: center;
+    padding-top: 50px;
+
+}
+.online-games-heading h1{
+    color: #0B0223;
+    font-size: 2.8rem;
+    font-weight: 750;
+    margin: 50px 0 0;
+
+}
+.online-games-heading span{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+
+}
+.online-games-heading p{
+    color: #534C64;
+    font-size: 1rem;
+    font-weight: 400;
+
+}
+.card img{
+    width: 250px;
+    height: 300px;
+    border-radius: 16px
+
+}
+.card p{
+    color: #534C64;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 20px;
+
+    
+}
+.card-container{
+    display: flex;
+    gap: 15px;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+/*Play instantly section*/
+.play-sec{
+    display: flex;
+    margin-top: 60px;
+    align-items: center;
+
+}
+
+.play-content{
+    text-align: right;
+    align-items: center;
+    padding-left: 110px;
+}
+
+.play-content h3{
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin: 0;
+}
+.play-content span{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.play-content p{
+    color: #534C64;
+    font-size: 1.125rem;
+    font-weight: 400;
+    line-height: 30px;
+    width: 353px;
+}
+.play-image{
+    margin-left: 200px; 
+}
+
+.play-big-img{
+    width: 550px;
+    height: 570px;
+    
+}
+.play-small-img img{
+    width: 230px;
+    height: 230px;
+    border-radius: 8px;
+    border: 2px solid #fff;
+    position: relative;
+    bottom: 130px;
+    margin-left: -20%;  
+}
+
+/*Games Types Section*/
+
+
+.games-types{
+    background-color: #f3c7e1;
+    height: 500px;  
+}
+.games-types-1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding-top: 170px;
+}
+.gt-1{
+    width: 180px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-2{
+    width: 210px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-3{
+    width: 190px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-4{
+    width: 220px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-5{
+    width: 175px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-p{
+    font-size: 1rem;
+    font-weight: 500;
+    color: #0B0223;
+    padding-left: 10px;
+}
+.gt-p:hover{
+    color: tomato;
+}
+
+.games-type-2{
+    display: flex;
+    justify-content: center;
+    padding-top: 35px;
+    gap: 20px;
+    
+}
+.gt-6{
+    width: 225px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-7{
+    width: 235px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-8{
+    width: 180px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+.gt-9{
+    width: 190px;
+    height: 60px;
+    display: flex;
+    border-radius: 50px;
+    background-color: #fdf8f8;
+    border: 1px solid #df9cc4;
+    align-items: center; 
+}
+
+
+/*Footer Section*/
+.footer-section{
+    background-color: #0B0223;
+    
+}
+
+.footer-logo{
+    justify-content: center;
+    padding-top: 100px;
+    gap: 15px; 
+    margin: 0;
+}
+.footer-span2{
+    color: #fff;
+}
+
+.footer-services > ul{
+    display: flex;
+    gap:60px;
+    list-style: none; 
+    justify-content: center;
+    padding-top: 50px;
+    
+}
+.footer-services li{
+    color: #fff;
+    font-size: 1.125;
+    font-weight: 500;
+    
+    
+}
+.f-icon{
+    gap: 40px;
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+}
+.footer-img{
+    
+    
+}
+.terms-policy > ul{
+    display: flex;
+    gap:60px;
+    list-style: none; 
+    justify-content: center;
+}
+.terms-policy li{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 1.125;
+    font-weight: 500;
+}
+.footer-p{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    padding: 10px 0 100px 0;
+}
+
+
+
+
+
